# careerscout

./: .gitignore  CONTRIBUTING.md  DIRECTIONS.md  MEMORY.md  README.md  UPDATES.md  Untitled1.ipynb  colab_setup.sh  data_layer_design.md  docker-compose.yml  generate_urls.py  go.mod  go.sum  mac_run.sh  prometheus.yml  run1_report.md  scrape_ats_companies.py  test_jobs.go  verify_ats_companies.py  verify_db.sql
.github/ISSUE_TEMPLATE/: bug_report.md  new_ats_platform.md
.github/workflows/: ci.yml
cmd/analyse/: main.go
cmd/bulk_fetch/: main.go
cmd/capture_run/: main.go  main_test.go
cmd/career_finder/: main.go
cmd/clean_urls/: main.go
cmd/discover/: integration_test.go  main.go
cmd/extract_patterns/: main.go
cmd/fetch_jobs/: main.go
cmd/harvest_companies/: main.go
cmd/harvest_crtsh/: main.go
cmd/harvest_urls/: main.go
cmd/ingestion/: main.go
cmd/label_captures/: main.go
cmd/normalise/: main.go
cmd/probe/: main.go
cmd/probe_ats/: main.go  main.go.bak
cmd/probe_workday/: main.go
cmd/report_captures/: main.go  report_test.go
cmd/review_nearmiss/: main.go
cmd/score_urls/: main.go
cmd/seed/: main.go
cmd/tier1/: main.go
cmd/tier2/: main.go
cmd/tier2_v2/: main.go
data/: seed_100_urls.sql
ebpf/: ssl_intercept.c
migrations/: 005_new_data_layer.sql
replay/: Cargo.toml
replay/src/: auth.rs  emitter.rs  main.rs  replayer.rs  scheduler.rs
schema/: 001_initial.sql
scripts/: clean_false_positives.sql  migrate_capture_table.sql  migrate_nearmiss_table.sql  report_results.sh  reset_pending.sh  run_production.sh
(+53 files in other folders)
