[package]
name = "replay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "replay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-util = "0.7"
anyhow = "1"
thiserror = "1"
envconfig = "0.10"
backoff = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

